--- a/index.html
+++ b/index.html
@@ -1,26 +1,164 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- BOOTRAP -->
-    <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">
-    <!-- CSS -->
-    <link rel="stylesheet" href="./assets/style.css">
-    <!-- FAVICON -->
-    <link rel="shortcut icon" href="./assets/image/coffee-favicon.png" type="image/x-icon">
-    <title>Coffe</title>
-</head>
-<body>
-    <!-- HEADER -->
-    
-    <!-- Main -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- ROBOTO FONT -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap"
+      rel="stylesheet"
+    />
 
+    <!-- BOOTRAP -->
+    <link
+      rel="stylesheet"
+      href="./node_modules/bootstrap/dist/css/bootstrap.min.css"
+    />
+    <!-- CSS -->
+    <link rel="stylesheet" href="./assets/css/style.css" />
+    <!-- FAVICON -->
+    <link
+      rel="shortcut icon"
+      href="./assets/image/coffee-favicon.png"
+      type="image/x-icon"
+    />
+    <title>Coffe</title>
+  </head>
+  <body>
+    <!-- HEADER -->
+    <header>
+      <div class="container">
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="#">
+              <img
+                src="./assets/image/latte.png"
+                alt="Logo"
+                width="30"
+                height="24"
+                class="d-inline-block align-text-top"
+                id="image"
+              />
+              Coffee
+            </a>
+            <button
+              class="navbar-toggler"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#navbarNav"
+              aria-controls="navbarNav"
+              aria-expanded="false"
+              aria-label="Toggle navigation"
+            >
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+              <ul class="navbar-nav">
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="#"
+                    >Home</a
+                  >
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Cardápio</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </nav>
+      </div>
+    </header>
+    <!-- Main -->
+    <main class="m-5">
+      <!-- TITULO -->
+      <div class="container">
+        <h1 class="text-center mb-3 mainTitle">First Coffee</h1>
+        <p class="text-center mainP">
+          Descubra os melhores cafés do mundo, com uma seleção especial de grãos
+          e blends que vão encantar o seu paladar.
+        </p>
+      </div>
+      <!-- CARROSEL -->
+      <div class="container">
+        <div
+          id="carouselExampleAutoplaying"
+          class="carousel slide carousel-fade mb-5"
+          data-bs-ride="carousel"
+        >
+          <div class="carousel-inner rounded">
+            <div class="carousel-item active">
+              <img
+                src="./assets/image/produtivicty.jpg"
+                class="d-block w-100"
+                alt="..."
+              />
+            </div>
+            <div class="carousel-item">
+              <img
+                src="./assets/image/cardistry.jpg"
+                class="d-block w-100"
+                alt="..."
+              />
+            </div>
+            <div class="carousel-item">
+              <img
+                src="./assets/image/bean.jpg"
+                class="d-block w-100"
+                alt="..."
+              />
+            </div>
+          </div>
+          <button
+            class="carousel-control-prev"
+            type="button"
+            data-bs-target="#carouselExampleAutoplaying"
+            data-bs-slide="prev"
+          >
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button
+            class="carousel-control-next"
+            type="button"
+            data-bs-target="#carouselExampleAutoplaying"
+            data-bs-slide="next"
+          >
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+      </div>
+      <!-- SEPARATOR -->
+      <div class="container">
+        <hr >
+      </div>
+      <!-- CARD TITLE -->
+      <div class="container">
+        <h2 class="text-center mb-4">Nossos Cafés</h2>
+        <p class="text-center mb-5">
+          Explore nossa seleção de cafés, cada um com seu sabor único e
+          especial.
+        </p>
+      </div>
+      <!-- CARDs -->
+       <div class="container">
+        <div class="row">
+          <!-- CARDS DINAMICOS IMPLEMENTADOS PELO JS -->
+          
+        </div>
+       </div>
+    </main>
+     <!-- SEPARATOR -->
+      <div class="container">
+        <hr >
+      </div>
     <!-- FOOTER -->
 
     <!-- BOOTSTRAP -->
     <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <!-- JS -->
     <script src="./src/sript.js"></script>
-</body>
+  </body>
 </html>
