--- a/cardapio.html
+++ b/cardapio.html
@@ -45,7 +45,7 @@
           <div class="">
             <label for="search" class="form-label mt-4">Buscar Café</label>
           </div>
-          <button type="button" class="button" data-bs-toggle="modal" data-bs-target="#exampleModal">
+          <button type="button" class="button" data-bs-toggle="modal" data-bs-target="#addModal">
             <i class="fa fa-add position-absolute addIcon"></i>
           </button>
 
@@ -80,15 +80,35 @@
           <tbody id="home-coffee-cards"></tbody>
         </table>
 
-        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-          <div class="modal-dialog">
+        <div class="modal fade" id="addModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal-dialog modal-lg modal-dialog-centered modal-dialog-scrollable">
             <div class="modal-content">
               <div class="modal-header">
                 <h1 class="modal-title fs-5" id="exampleModalLabel">Cadastrar Item</h1>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
               </div>
               <div class="modal-body">
-                ...
+                <form action="" class="" id="form-cadastrar-item">
+                  <div class="form-floating ">
+                    <input type="text" class="form-control mb-3" id="nome-produto" placeholder="Nome do Produto" />
+                    <label for="nome-produto">Nome do Produto</label>
+                  </div>
+                  <div class="form-floating ">
+                    <input type="url" class="form-control mb-3" id="imagem-produto" placeholder="Imagem do Produto" />
+                    <label for="imagem-produto">Imagem do Produto</label>
+                  </div>
+                  <div class="form-floating ">
+                    <input type="number" class="form-control mb-3" id="preco-produto" placeholder="Preço do Produto" />
+                    <label for="preco-produto">Preço do Produto</label>
+                  </div>
+                  <div class="form-floating">
+                    <textarea class="form-control" placeholder="Descrição do Produto" id="descricao-produto" style="height: 100px"></textarea>
+                    <label for="descricao-produto">Descrição do Produto</label>
+                  </div>
+
+
+
+                </form>
               </div>
               <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
