:bug: fix bug home cards

--- a/index.html
+++ b/index.html
@@ -3,26 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- ROBOTO FONT -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap"
       rel="stylesheet"
     />
-    <!-- FONT AWESOME -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
     />
-    <!-- BOOTRAP -->
     <link
       rel="stylesheet"
       href="./node_modules/bootstrap/dist/css/bootstrap.min.css"
     />
-    <!-- CSS -->
     <link rel="stylesheet" href="./assets/css/style.css" />
-    <!-- FAVICON -->
     <link
       rel="shortcut icon"
       href="./assets/image/coffee-favicon.png"
@@ -31,11 +26,8 @@
     <title>Coffe</title>
   </head>
   <body>
-    <!-- HEADER -->
     <header></header>
-    <!-- Main -->
     <main class="m-5">
-      <!-- TITULO -->
       <div class="container">
         <h1 class="text-center mb-3 mainTitle">First Coffee</h1>
         <p class="text-center mainP">
@@ -43,7 +35,6 @@
           e blends que vão encantar o seu paladar.
         </p>
       </div>
-      <!-- CARROSEL -->
       <div class="container">
         <div
           id="carouselExampleAutoplaying"
@@ -93,12 +84,10 @@
           </button>
         </div>
       </div>
-      <!-- SEPARATOR -->
       <div class="container">
         <hr />
       </div>
-      <!-- CARDS -->
-      <div class="container mt-5" id="home-coffee-cards">
+      <div class="container mt-5"> 
         <h1 class="text-center mb-4">Nossos Cafés</h1>
         <p class="text-center mb-5">
           Explore nossa seleção de cafés, cada um com seu sabor único e
@@ -107,15 +96,11 @@
         <div class="row cards grid homeCards" id="bester-coffee-cards"></div>
       </div>
     </main>
-    <!-- SEPARATOR -->
     <div class="container">
       <hr />
     </div>
-    <!-- FOOTER -->
     <footer class="bg-dark text-white pt-5 pb-4"></footer>
-    <!-- BOOTSTRAP -->
     <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- JS -->
     <script src="./src/index.js" type="module"></script>
   </body>
 </html>
